* Reintroduction of the skin switcher tool
* Consider chrome:// as internal url, and do not ask anumore to load the url with an external app.
* Fullscreen is now a *real* fullscreen
* Fix the initialisation of the random article url generator (ID: 3109548)
* Fix an issue by tab rendering after closing one (ID: 3108586)

Kiwix 0.9 alpha6
* Fix a regression bug impacting the case insensitive (first character only) suggestion system
* Fix a bug in kiwix-serve impacting search results with titles including special characters
* Add the --verbose|-v arugment to kiwix-index
* Add a stub HTML header&footer in case of the article only have a <body> (ID: 3030608)
* Fix a bug in the ./configure libicu version checking (ID: 3034150)
* Fix a bug in the debian/posrtrm script (ID: 3035092)
* Complete the DEB package with additional informations
* Add the "Purge history" Tool (ID: 3036917)
* Tab navigation (ID: 1644478)
* Capacity to deal with splitted ZIM files
* Add mouse button forward/back support (ID: 3052213)
* Fix annoyous bug impacting user moving and reopening the same file (ID: 3052211)
* Remember the file picker path over sessions
* Does not read/save anymore the profile library if "live" instance (DVD or USB)
* Per default, use now the OS default language and not English anymore
* Remove the auto full text search by typing the search pattern (was introduced in alpha5 and needs too much CPU)
* Add new useful keyboard shortcuts like in Firefox (ID: 2992557)
* Better help page in English

Kiwix 0.9 alpha5
* kiwix-serve supports the inflate/deflate compression for text/html
* Fix bug in the search query tokenizer impact massively Malayalam

Kiwix 0.9 alpha4
* Fix a bug (regression) if no welcome page in the ZIM
* Introduce the kiwix-debug.bat for Windows
* Fix a UNICODE issue on Windows search engine
* kiwix-compact can now directly take xapian-directory path as argument

Kiwix 0.9 alpha3
* Fix major bug ID: 2991242, On Windows the search is accent sensitive
